# crossd

./: Cargo.toml  LICENSE-MIT  flake.nix
core/: Cargo.toml
core/src/: layout.rs  lib.rs  view.rs
core/src/backend/: mod.rs
core/src/widget/: button.rs  column.rs  mod.rs  text.rs
crossd/: Cargo.toml
crossd/examples/: counter.rs
crossd/macros/: Cargo.toml
crossd/macros/src/: lib.rs
crossd/src/: layout.rs  lib.rs  signal.rs  view.rs
crossd/src/graphics/: mod.rs
crossd/src/widget/: button.rs  canvas.rs  column.rs  label.rs  mod.rs  text.rs
crossgl/: Cargo.toml  shader.wgsl
crossgl/src/: color.rs  lib.rs
crossgl/src/math/: circle.rs  mat3.rs  mod.rs  point2.rs  rect.rs  size2.rs  triangle.rs  vec3.rs  vec4.rs
crossgl/src/scene/: element.rs  gpu.rs  mod.rs  path.rs
examples/: counter.rs
graphics/: Cargo.toml
graphics/examples/: quad.rs
graphics/src/: backend.rs  color.rs  geometry.rs  lib.rs  primitive.rs
graphics/src/encoding/: mod.rs
graphics/src/geometry/: point2.rs  rect.rs  size2.rs
graphics/src/graphics/: canvas.rs  context.rs  frame.rs  layer.rs  mod.rs  quad.rs  scene.rs  surface.rs  triangle.rs
graphics/src/graphics/rasterize/: mod.rs  rasterize.wgsl
graphics/src/primitive/: mod.rs  quad.rs
graphics/src/shader/: quad.wgsl  triangle.wgsl
graphics/src/utils/: assertions.rs  gpu_buf.rs  gpu_store.rs  gpu_vec.rs  mod.rs  uniform_store.rs
math/: Cargo.toml
math/src/: lib.rs  mat2.rs  mat4.rs  mod.rs  num.rs  point2.rs  rect.rs  size2.rs  trans2.rs  vec2.rs  vec3.rs  vec4.rs
scene/: Cargo.toml  rustfmt.toml
scene/src/: color.rs  element.rs  lib.rs  num.rs  path.rs
scene/src/math/: circle.rs  mat3.rs  mod.rs  point2.rs  rect.rs  size2.rs  vec2.rs  vec3.rs  vec4.rs
scene/src/scene/: element.rs  mod.rs  path.rs
scene/src/scene/element/: text.rs
src/: layout.rs  lib.rs  view.rs
