[workspace]
members = ["math", "graphics", "crossd"]
resolver = "2"

[workspace.package]
authors = ["Alexandra Reaves <nyxalexandra@proton.me>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/NyxAlexandra/crossd"

[workspace.dependencies]
crossd-math = { path = "./math" }
crossd-graphics = { path = "./graphics" }

tracing = "0.1.37"
tracing-subscriber = "0.3"
