[package]
name = "crossd"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu", "tiny-skia"]
wgpu = ["dep:crossd-graphics"]
tiny-skia = ["dep:tiny-skia"]

[dependencies]
tiny-skia = { version = "0.11.3", optional = true }

crossd-math.workspace = true
crossd-scene.workspace = true
crossd-graphics = { workspace = true, optional = true }
